--- a/index.html
+++ b/index.html
@@ -3,17 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Yestu_Shoes</title>
+    <title>Yetu_Shoes</title>
     
+
     <!-- icon links -->
     <link rel="stylesheet" href="font-awesome/css/font-awesome.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
      <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+
+        <!--Styling sheet-->
+        <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <header>
         <div id="menu-bar" class="fa fa-bars"></div>
+
         <a href="#" class="logo">Logo</a>
         <nav class="navbar">
             <a href="">Home</a>
