--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 
         <!--Styling sheet-->
         <link rel="stylesheet" href="css/style.css">
+        <script src="js/script.js"></script>
 </head>
 <body>
     <header>
@@ -33,5 +34,79 @@
             <a href="#"><i class="fa fa-user"></i></a>
         </div>
     </header>
+
+    <section class="home" id="home">
+        <div class="slide-container active">
+            <div class="slide">
+                <div class="content">
+                    <span>Nike Sport Shoes</span>
+                    <h3>Nike Metcon Shoes</h3>
+                    <p>
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit
+                        Sunt nam adipisci ipsa officiis Amet pariatur eaque soluta
+                        sit iure neque voluptate.
+                    </p>
+                    <a href="#" class="btn">add to card</a>
+                </div>
+                <div class="image">
+                    <img src="img/slide/1.png" class="shoe">
+                </div>
+            </div>
+        </div>
+        <div class="slide-container">
+            <div class="slide">
+                <div class="content">
+                    <span>Nike Sport Shoes</span>
+                    <h3>Nike Metcon Shoes</h3>
+                    <p>
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit
+                        Sunt nam adipisci ipsa officiis Amet pariatur eaque soluta
+                        sit iure neque voluptate.
+                    </p>
+                    <a href="#" class="btn">add to card</a>
+                </div>
+                <div class="image">
+                    <img src="img/slide/2.png" class="shoe">
+                </div>
+            </div>
+        </div>
+        <div class="slide-container">
+            <div class="slide">
+                <div class="content">
+                    <span>Nike Sport Shoes</span>
+                    <h3>Nike Metcon Shoes</h3>
+                    <p>
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit
+                        Sunt nam adipisci ipsa officiis Amet pariatur eaque soluta
+                        sit iure neque voluptate.
+                    </p>
+                    <a href="#" class="btn">add to card</a>
+                </div>
+                <div class="image">
+                    <img src="img/slide/3.png" class="shoe">
+                </div>
+            </div>
+        </div>
+        <div class="slide-container">
+            <div class="slide">
+                <div class="content">
+                    <span>Nike Sport Shoes</span>
+                    <h3>Nike Metcon Shoes</h3>
+                    <p>
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit
+                        Sunt nam adipisci ipsa officiis Amet pariatur eaque soluta
+                        sit iure neque voluptate.
+                    </p>
+                    <a href="#" class="btn">add to card</a>
+                </div>
+                <div class="image">
+                    <img src="img/slide/4.png" class="shoe">
+                </div>
+            </div>
+        </div>
+    
+        <div id="prev" class="fa fa-angle-left" onclick="prev();"></div>
+        <div id="next" class="fa fa-angle-right" onclick="next();"></div>
+    </section>
 </body>
 </html>
