changed the position of the script file on the html file

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
         <!--Styling sheet-->
         <link rel="stylesheet" href="css/style.css">
-        <script src="js/script.js"></script>
+        
 </head>
 <body>
     <header>
@@ -39,12 +39,13 @@
         <div class="slide-container active">
             <div class="slide">
                 <div class="content">
-                    <span>Nike Sport Shoes</span>
-                    <h3>Nike Metcon Shoes</h3>
+                    <span>HIGH TOP SNEAKERS</span>
+                    <h3>HIGH TOP SNEAKERS</h3>
                     <p>
-                        Lorem ipsum, dolor sit amet consectetur adipisicing elit
-                        Sunt nam adipisci ipsa officiis Amet pariatur eaque soluta
-                        sit iure neque voluptate.
+                        If you’re after a pair that will take you from lunches to late-night drinks, Axel Arigato’s Area Hi sneakers are a great
+                        place to start. Looking a little like something Marty McFly would rock with his jeans and gilet, they look just as good
+                        with cargos and an oversized hoodie.
+
                     </p>
                     <a href="#" class="btn">add to card</a>
                 </div>
@@ -56,12 +57,13 @@
         <div class="slide-container">
             <div class="slide">
                 <div class="content">
-                    <span>Nike Sport Shoes</span>
-                    <h3>Nike Metcon Shoes</h3>
+                    <span>DESIGNER SNEAKERS</span>
+                    <h3>DESIGNER SNEAKERS</h3>
                     <p>
-                        Lorem ipsum, dolor sit amet consectetur adipisicing elit
-                        Sunt nam adipisci ipsa officiis Amet pariatur eaque soluta
-                        sit iure neque voluptate.
+                    As you’d expect, the designs out there are plentiful, but there’s one brand that continues to pump out some of the
+                    finest footwear on the market. Who am I talking about? Veja. The Parisian brand has become a major player in the sneaker
+                    game, producing a range of sustainable styles that have been worn by the likes of Meghan Markle and Eddie Redmayne.
+                    They’ll be your go-to for casual days in the office, as well as weekends in the city.
                     </p>
                     <a href="#" class="btn">add to card</a>
                 </div>
@@ -108,5 +110,6 @@
         <div id="prev" class="fa fa-angle-left" onclick="prev();"></div>
         <div id="next" class="fa fa-angle-right" onclick="next();"></div>
     </section>
+    <script src="js/script.js"></script>
 </body>
 </html>
