edited the logo text

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <header>
         <div id="menu-bar" class="fa fa-bars"></div>
 
-        <a href="#" class="logo">Logo</a>
+        <a href="#" class="logo"><i>YETU<sub>SHOES</sub></i></a>
         <nav class="navbar">
             <a href="">Home</a>
             <a href="">Product</a>
