--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Yetu_Shoes</title>
-    <link rel="icon" type="imag/png" href="img/logo.png" />
+    <link rel="icon" type="imag/avif" href="/logo.avif" />
     
 
     <!-- icon links -->
@@ -33,6 +33,15 @@
             <a href="#"><i class="fa fa-heart"></i></a>
             <a href="#"><i class="fa fa-shopping-cart"></i></a>
             <a href="#"><i class="fa fa-user"></i></a>
+        </div>
+        <div class="cointainer">
+            <span class="icon"><a href="#"><i class="fa fa-linkedin"></i></a></span>
+            <span class="icon"><a href="#"><i class="fa fa-facebook"></i></a></span>
+            <span class="icon"><a href="#"><i class="fa fa-twitter"></i></a></span>
+            <span class="icon"><a href="#"><i class="fa fa-youtube"></i></a></span>
+            <span class="icon"><a href="#"><i class="fa fa-whatsapp"></i></a></span>
+            <span class="icon"><a href="#"><i class="fa fa-telegram"></i></a></span>
+            <span class="icon"><a href="#"><i class="fa fa-google"></i></a></span>
         </div>
     </header>
 
