formated the social media links and created the whatsapp link

--- a/index.html
+++ b/index.html
@@ -35,13 +35,13 @@
             <a href="#"><i class="fa fa-user"></i></a>
         </div>
         <div class="cointainer">
-            <span class="icon"><a href="#"><i class="fa fa-linkedin"></i></a></span>
-            <span class="icon"><a href="#"><i class="fa fa-facebook"></i></a></span>
-            <span class="icon"><a href="#"><i class="fa fa-twitter"></i></a></span>
-            <span class="icon"><a href="#"><i class="fa fa-youtube"></i></a></span>
-            <span class="icon"><a href="#"><i class="fa fa-whatsapp"></i></a></span>
-            <span class="icon"><a href="#"><i class="fa fa-telegram"></i></a></span>
-            <span class="icon"><a href="#"><i class="fa fa-google"></i></a></span>
+            <span class="icon"><a href="#"><i class="fa fa-linkedin" title="LinkedIn"></i></a></span>
+            <span class="icon"><a href="#"><i class="fa fa-facebook" title="Facebook"></i></a></span>
+            <span class="icon"><a href="#"><i class="fa fa-twitter" title="Twitter"></i></a></span>
+            <span class="icon"><a href="#"><i class="fa fa-youtube" title="Youtube"></i></a></span>
+            <span class="icon"><a href="https://api.whatsapp.com/send?phone=254788201306&text=Hello chat with Yetu Shoes..."><i class="fa fa-whatsapp" title="fa-whatsapp"></i></a></span>
+            <span class="icon"><a href="#"><i class="fa fa-telegram" title="Telegram"></i></a></span>
+            <span class="icon"><a href="#"><i class="fa fa-google" title="Google"></i></a></span>
         </div>
     </header>
 
