changed the position of the social media icons

--- a/index.html
+++ b/index.html
@@ -34,15 +34,7 @@
             <a href="#"><i class="fa fa-shopping-cart"></i></a>
             <a href="#"><i class="fa fa-user"></i></a>
         </div>
-        <div class="cointainer">
-            <span class="icon"><a href="#"><i class="fa fa-linkedin" title="LinkedIn"></i></a></span>
-            <span class="icon"><a href="#"><i class="fa fa-facebook" title="Facebook"></i></a></span>
-            <span class="icon"><a href="#"><i class="fa fa-twitter" title="Twitter"></i></a></span>
-            <span class="icon"><a href="#"><i class="fa fa-youtube" title="Youtube"></i></a></span>
-            <span class="icon"><a href="https://api.whatsapp.com/send?phone=254788201306&text=Hello chat with Yetu Shoes..."><i class="fa fa-whatsapp" title="fa-whatsapp"></i></a></span>
-            <span class="icon"><a href="#"><i class="fa fa-telegram" title="Telegram"></i></a></span>
-            <span class="icon"><a href="#"><i class="fa fa-google" title="Google"></i></a></span>
-        </div>
+        
     </header>
 
     <section class="home" id="home">
@@ -121,5 +113,16 @@
         <div id="next" class="fa fa-angle-right" onclick="next();"></div>
     </section>
     <script src="js/script.js"></script>
+    <footer>
+        <div class="cointainer">
+            <span class="icon"><a href="#"><i class="fa fa-linkedin" title="LinkedIn"></i></a></span>
+            <span class="icon"><a href="#"><i class="fa fa-facebook" title="Facebook"></i></a></span>
+            <span class="icon"><a href="#"><i class="fa fa-twitter" title="Twitter"></i></a></span>
+            <span class="icon"><a href="#"><i class="fa fa-youtube" title="Youtube"></i></a></span>
+            <span class="icon"><a href="https://api.whatsapp.com/send?phone=254757150387&text=Hello chat with Yetu Shoes..."><i class="fa fa-whatsapp" title="fa-whatsapp"></i></a></span>
+            <span class="icon"><a href="#"><i class="fa fa-telegram" title="Telegram"></i></a></span>
+            <span class="icon"><a href="#"><i class="fa fa-google" title="Google"></i></a></span>
+        </div>
+    </footer>
 </body>
 </html>
