edited the wahtsapp title

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
             <span class="icon"><a href="#"><i class="fa fa-facebook" title="Facebook"></i></a></span>
             <span class="icon"><a href="#"><i class="fa fa-twitter" title="Twitter"></i></a></span>
             <span class="icon"><a href="#"><i class="fa fa-youtube" title="Youtube"></i></a></span>
-            <span class="icon"><a href="https://api.whatsapp.com/send?phone=254757150387&text=Hello chat with Yetu Shoes..."><i class="fa fa-whatsapp" title="fa-whatsapp"></i></a></span>
+            <span class="icon"><a href="https://api.whatsapp.com/send?phone=254757150387&text=Hello chat with Yetu Shoes..."><i class="fa fa-whatsapp" title="whatsapp"></i></a></span>
             <span class="icon"><a href="#"><i class="fa fa-telegram" title="Telegram"></i></a></span>
             <span class="icon"><a href="#"><i class="fa fa-google" title="Google"></i></a></span>
         </div>
