edited the whatsapp number

--- a/index.html
+++ b/index.html
@@ -32,8 +32,9 @@
         <a href="">Home</a>
         <a href="">Product</a>
         <a href="">Fearured</a>
-        <a href="">blog</a>
-        <a href="">contact us</a>
+        <a href="">contact</a>
+
+        
       </nav>
       <div class="icons">
         <a href="#"><i class="fa fa-heart"></i></a>
@@ -282,7 +283,7 @@
           var message = "Hello! Welcome Yetu Shoes how can we help you";
 
           // Replace "1234567890" with your desired WhatsApp number
-          var phoneNumber = "0788201306";
+          var phoneNumber = "+254788201306";
 
           var encodedMessage = encodeURIComponent(message);
           var whatsappURL = "https://wa.me/" + phoneNumber + "?text=" + encodedMessage;
