--- a/index.html
+++ b/index.html
@@ -24,7 +24,6 @@
   <body>
     <header>
       <div id="menu-bar" class="fa fa-bars"></div>
-
       <a href="#" class="logo"
         ><i>YETU<sub>SHOES</sub></i></a
       >
@@ -239,6 +238,98 @@
               <i class="fa fa-star"></i>
             </div>
           </div>
+        </div>
+      </div>
+    </section>
+   <!-- end of the product section and the beginng of the feature section -->
+   
+    <section class="featured" id="fearured">
+      <h1 class="heading">New <span>Product</span></h1>
+      <div class="row">
+        <div class="image-container">
+          <div class="small-image">
+            <img src="img/product1/1.jpg" alt="" class="featured-image-1">
+            <img src="img/product1/2.jpg" alt="" class="featured-image-1">
+            <img src="img/product1/3.jpg" alt="" class="featured-image-1">
+            <img src="img/product1/4.jpg" alt="" class="featured-image-1">
+          </div>
+          <div class="big-image">
+            <img src="img/product1/1.jpg" alt="" class="big-image-1">
+          </div>
+        </div>
+        <div class="content">
+          <h3>new nike airmac shoes</h3>
+          <div class="stars">
+            <i class="fa fa-star"></i>
+            <i class="fa fa-star"></i>
+            <i class="fa fa-star"></i>
+            <i class="fa fa-star"></i>
+            <i class="fa fa-star"></i>
+          </div>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit.
+            Fugit officiis omnis quo laboriosam velit culpa ex illo, error enim nostrum?
+          </p>
+          <div class="price">$90 <span>$120</span></div>
+          <a href="#" class="btn">add to cart</a>
+        </div>
+      </div>
+      <div class="row">
+        <div class="image-container">
+          <div class="small-image">
+            <img src="img/product2/1.jpg" alt="" class="featured-image-2">
+            <img src="img/product2/2.jpg" alt="" class="featured-image-2">
+            <img src="img/product2/3.jpg" alt="" class="featured-image-2">
+            <img src="img/product2/4.jpg" alt="" class="featured-image-2">
+          </div>
+          <div class="big-image">
+            <img src="img/product2/1.jpg" alt="" class="big-image-2">
+          </div>
+        </div>
+        <div class="content">
+          <h3>new nike airmac shoes</h3>
+          <div class="stars">
+            <i class="fa fa-star"></i>
+            <i class="fa fa-star"></i>
+            <i class="fa fa-star"></i>
+            <i class="fa fa-star"></i>
+            <i class="fa fa-star"></i>
+          </div>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit.
+            Fugit officiis omnis quo laboriosam velit culpa ex illo, error enim nostrum?
+          </p>
+          <div class="price">$90 <span>$120</span></div>
+          <a href="#" class="btn">add to cart</a>
+        </div>
+      </div>
+      <div class="row">
+        <div class="image-container">
+          <div class="small-image">
+            <img src="img/product3/1.jpg" alt="" class="featured-image-3">
+            <img src="img/product3/2.jpg" alt="" class="featured-image-3">
+            <img src="img/product3/3.jpg" alt="" class="featured-image-3">
+            <img src="img/product3/4.jpg" alt="" class="featured-image-3">
+          </div>
+          <div class="big-image">
+            <img src="img/product3/1.jpg" alt="" class="big-image-3">
+          </div>
+        </div>
+        <div class="content">
+          <h3>new nike airmac shoes</h3>
+          <div class="stars">
+            <i class="fa fa-star"></i>
+            <i class="fa fa-star"></i>
+            <i class="fa fa-star"></i>
+            <i class="fa fa-star"></i>
+            <i class="fa fa-star"></i>
+          </div>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit.
+            Fugit officiis omnis quo laboriosam velit culpa ex illo, error enim nostrum?
+          </p>
+          <div class="price">$90 <span>$120</span></div>
+          <a href="#" class="btn">add to cart</a>
         </div>
       </div>
     </section>
