--- a/index.html
+++ b/index.html
@@ -23,15 +23,16 @@
   </head>
   <body>
     <header>
-      <div id="menu-bar" class="fa fa-bars"></div>
+      <div id="menu-bar" class="fa fa-bars">
+      </div>
       <a href="#" class="logo"
         ><i>YETU<sub>SHOES</sub></i></a>
        
         <nav class="navbar">
-        <a href="">Home</a>
-        <a href="">Product</a>
-        <a href="">Staffs</a>
-        <a href="">contact</a>
+        <a href="#home">Home</a>
+        <a href="#product">Product</a>
+        <a href="#staff">Staffs</a>
+        <a href="#contact">contact</a>
       </nav>
 
       <div class="icons">
