changed staffs name

--- a/index.html
+++ b/index.html
@@ -336,11 +336,11 @@
 
     <!-- our team/staff -->
     <section class="staff" id="staff">
-      <h1 class="heading">Yetu<span>Staffs</span></h1>
+      <h1 class="heading">Yetu shoes<span> Staffs</span></h1>
       <div class="box-container">
         <div class="box">
-          <img src="img/team/three.jpg" alt="">
-          <h3>Otieno Lubalo</h3>
+          <img src="img/team/three.jpg" alt="otieno lubalo">
+          <h3>Lubalo</h3>
           <p>
             Lorem ipsum, dolor sit amet consectetur adipisicing elit.
             Eos sequi temporibus impedit corporis vero ab exercitationem
@@ -355,7 +355,7 @@
           </div>
         </div>
         <div class="box">
-          <img src="img/team/one.jpg" alt="">
+          <img src="img/team/one.jpg" alt="Bazengress">
           <h3>Bazengress</h3>
           <p>
             Lorem ipsum, dolor sit amet consectetur adipisicing elit.
@@ -371,8 +371,8 @@
           </div>
         </div>
         <div class="box">
-          <img src="img/team/two.jpg" alt="">
-          <h3>Otieno Brain</h3>
+          <img src="img/team/two.jpg" alt="otieno brian">
+          <h3>Otieno</h3>
           <p>
             Lorem ipsum, dolor sit amet consectetur adipisicing elit.
             Eos sequi temporibus impedit corporis vero ab exercitationem
